fix regression where layers tool is hidden on tablets

--- a/site/app/view/map/tool.styl
+++ b/site/app/view/map/tool.styl
@@ -21,13 +21,3 @@
 
   legend
     margin          0
-
-.tool.info
-  left            0
-  top             160px
-  fieldset
-    margin-bottom   1em
-
-.tool.layers
-  right           0
-  top             80px
